1er Commit al MASTER para el Html y Css del blogspot

--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -1,6 +1,20 @@
 body {
-	color: purple;
-	text-align: center;
+	color: rgb(62, 34, 221);
+	text-align: none;
 	font-family: "arial";
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
 }
 
+#container {
+	width: 80%;
+	padding: 1cm;
+	text-align: justify;
+	border: 10px solid #292218;
+	margin: 20 50;
+}
+
+#container h1 {
+	font-size: 30px; 
+}
