--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -7,6 +7,20 @@ body {
 	padding: 0;
 }
 
+#cabecera {
+	background-color: blueviolet;
+	box-shadow: 0px 2px 20px 20px rgb(100, 83, 83);
+	color:white;
+	padding: 0.5cm;
+	margin:0;
+	font-weight: bold;
+}
+
+#cabecera #tagline {
+	font-weight: normal;
+	margin-left: 1cm;
+}
+
 #container {
 	width: 80%;
 	padding: 1cm;
