--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -1,7 +1,7 @@
 body {
 	color: rgb(62, 34, 221);
 	text-align: none;
-	font-family: "arial";
+	font-family:cursive;
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
