--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -1,5 +1,5 @@
 body {
-	color: rgb(62, 34, 221);
+	color: rgb(13, 104, 36);
 	text-align: none;
 	font-family:cursive;
 	font-size: 16px;
@@ -8,9 +8,9 @@ body {
 }
 
 #cabecera {
-	background-color: blueviolet;
+	background-color: rgb(9, 38, 90);
 	box-shadow: 0px 2px 20px 20px rgb(100, 83, 83);
-	color:white;
+	color:#daacac;
 	padding: 0.5cm;
 	margin:0;
 	font-weight: bold;
