--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -1,7 +1,7 @@
 body {
 	color: rgb(13, 104, 36);
 	text-align: none;
-	font-family:cursive;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
@@ -10,14 +10,16 @@ body {
 #cabecera {
 	background-color: rgb(9, 38, 90);
 	box-shadow: 0px 2px 20px 20px rgb(100, 83, 83);
-	color:#daacac;
+	color: #dadada;
 	padding: 0.5cm;
 	margin:0;
 	font-weight: bold;
+	font-size:30px;
 }
 
 #cabecera #tagline {
-	font-weight: normal;
+	font-weight: none;
+	font-size:17px;
 	margin-left: 1cm;
 }
 
@@ -30,5 +32,6 @@ body {
 }
 
 #container h1 {
-	font-size: 30px; 
+	font-size: 25px; 
+	
 }
