--- a/CSS/syles.css
+++ b/CSS/syles.css
@@ -5,6 +5,7 @@ body {
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
+	background-color: ;
 }
 
 #cabecera {
@@ -37,9 +38,14 @@ img {
 	text-align: justify;
 	border: 10px solid #292218;
 	margin: 20 50;
+	background-color: #292218;
 }
 
 #container h1 {
 	font-size: 25px; 
-	
+	}
+#post {
+	background: rgb(197, 177, 177);
 }
+]
+]
